// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/utils/sw-internal-link should render correctly 1`] = `
<a
  class="sw-internal-link"
>
  test internal link 
  <sw-icon-stub
    name="regular-long-arrow-right"
    small=""
  />
</a>
`;

exports[`components/utils/sw-internal-link should render correctly when disabled 1`] = `
<span
  class="sw-internal-link sw-internal-link--disabled"
>
  test internal link 
  <sw-icon-stub
    name="regular-long-arrow-right"
    small=""
  />
</span>
`;
